# CollegeTrendAnalysis

./: .env.example  LICENSE  README.md  program.py  pyproject.toml  requirements.txt  test.py
