[tool.poetry]
name = "collegecostcalculator"
version = "0.1.0"
description = ""
authors = ["Sam Crabtree"]

[tool.poetry.dependencies]
python = "3.8"
requests = "^2.28.0"
python-dotenv = "^0.20.0"
matplot = "^0.1.9"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
scipy = "1.8"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
